--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Ali Qassem
-subtitle: Ali Qassem : Security Researcher & Coder
+subtitle: Ali Qassem / Security Researcher & Coder
 ---
